--- a/page10.html
+++ b/page10.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section content5 cid-r6LNszsEzV" id="content5-3z">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-r6LNszsEzV" id="content5-3z">
 
     
 
@@ -102,7 +102,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WDFwze0dqgOucpGu+MKFZXHVn/Dj8kn4tbFAAgsQsfBZAD27ENbbwdQ6pRHorSfH6woHY+d7OPWXDb8Ocfl2Kph+VZUH6/y2g/p3wCmQdCbXu+FLd4e//AIzF2Nfb7SD">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iq7M1rjkLf47JZJd2fvfMNP2A22zsV4mrTYoTv/I0EjfiTAyWHyNsuYC/9oKlO9fUPnTXKttKTHlH3rq15LA57crD6d9o3frBOpdugZbzoaqrtkYIql4wkPuorEo1Ciz">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
